// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelInfoModal renders component 1`] = `
<Component
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={true}
  isCloseDisabled={false}
  open={true}
  title="Channel Information"
>
  <AutoSizer
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <Component />
  </AutoSizer>
</Component>
`;

exports[`ChannelInfoModal renders component when closed 1`] = `
<Component
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  fullPage={true}
  handleClose={[MockFunction]}
  isBold={true}
  isCloseDisabled={false}
  open={false}
  title="Channel Information"
>
  <AutoSizer
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <Component />
  </AutoSizer>
</Component>
`;
